--- a/Source/Pekspro.RadioStorm.MAUI/Views/EpisodeDownloadStateControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/EpisodeDownloadStateControl.xaml
@@ -15,7 +15,7 @@
             <VisualState Name="Listened">
                 <VisualState.StateTriggers>
                     <StateTrigger 
-                            IsActive="{Binding IsListened, Converter={StaticResource SafeBoolConverter}}"  
+                            IsActive="{Binding IsListened}"  
                         />
                 </VisualState.StateTriggers>
                 <VisualState.Setters>
