--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/EpisodeControl.xaml
@@ -19,7 +19,7 @@
                 <VisualState Name="Listened">
                     <VisualState.StateTriggers>
                         <StateTrigger 
-                            IsActive="{Binding IsListened, Converter={StaticResource SafeBoolConverter}}"  
+                            IsActive="{Binding IsListened}"  
                         />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
