--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -133,6 +133,14 @@
                 <Setter Property="BorderWidth" Value="0" />
             </Style>
 
+            <Style x:Key="TextPlayerButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="WidthRequest" Value="{OnPlatform Default=56, WinUI=48}" />
+                <Setter Property="Padding" Value="{OnPlatform Default=0, WinUI='6,8'}" />
+                <Setter Property="Margin" Value="{OnPlatform Default=0, WinUI=0}" />
+                <Setter Property="BorderWidth" Value="0" />
+            </Style>
+
             <Style x:Key="Separator" TargetType="Rectangle">
                 <Setter Property="StrokeThickness" Value="0" />
                 <Setter Property="HeightRequest" Value="1" />
