--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
@@ -8,24 +8,44 @@
             >
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="auto" />
+        <ColumnDefinition Width="auto" />
         <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="auto" />
         <ColumnDefinition Width="auto" />
     </Grid.ColumnDefinitions>
 
-    <Label  Grid.Column="0" 
-            Text="{Binding PositionString, Mode=OneWay}" 
-            VerticalTextAlignment="Center" 
-            Padding="4"
+    <Button Grid.Column="0"
+            Text="- 15s"
+            Command="{Binding BackwardCommand}"
+            Style="{StaticResource TextPlayerButton}"
+            IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
+            Margin="{OnPlatform Default=0, WinUI='8,0,0,0'}"
             />
 
-    <Slider x:Name="ProgressSlider" Grid.Column="1" HeightRequest="40" 
+    <Label  Grid.Column="1" 
+            Text="{Binding PositionString, Mode=OneWay}"
+            VerticalTextAlignment="Center" 
+            Padding="4,0,0,0"
+            />
+
+    <Slider x:Name="ProgressSlider"
+            Grid.Column="2" 
+            HeightRequest="{OnPlatform Default=40, WinUI=32}"
+            Margin="{OnPlatform Default=0, WinUI='8,0'}"
             DragStarted="ProgressSlider_DragStarted" 
             ValueChanged="ProgressSlider_ValueChanged"
             DragCompleted="ProgressSlider_DragCompleted" />
 
-    <Label  Grid.Column="2"
+    <Label  Grid.Column="3"
             Text="{Binding MediaLengthString, Mode=OneWay}" 
             VerticalTextAlignment="Center" 
-            Padding="4"
+            Padding="0,0,4,0"
+            />
+
+    <Button Grid.Column="4"
+            Text="+ 15s"
+            Command="{Binding ForwardCommand}"
+            Style="{StaticResource TextPlayerButton}"
+            IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
             />
 </Grid>
