--- a/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/PlayerPositionControl.xaml
@@ -15,8 +15,8 @@
     </Grid.ColumnDefinitions>
 
     <Button Grid.Column="0"
-            Text="- 15s"
-            Command="{Binding BackwardCommand}"
+            Text="{Binding SeekSizeViewModel.RewindSize, Converter={StaticResource TimeSpanToSeekSizeStringConverter}}"
+            Command="{Binding RewindCommand}"
             Style="{StaticResource TextPlayerButton}"
             IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
             Margin="{OnPlatform Default=0, WinUI='8,0,0,0'}"
@@ -43,7 +43,7 @@
             />
 
     <Button Grid.Column="4"
-            Text="+ 15s"
+            Text="{Binding SeekSizeViewModel.ForwardSize, Converter={StaticResource TimeSpanToSeekSizeStringConverter}}"
             Command="{Binding ForwardCommand}"
             Style="{StaticResource TextPlayerButton}"
             IsVisible="{Binding IsCurrentItemLiveAudio, Converter={StaticResource InvertedBoolConverter}}"
